--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,7 @@
 @font-face {
     font-family: 'Exo2.0-Thin';
     font-style: normal;
-    src: url(/fonts/Exo2.0-Thin.otf) format('opentype'),
-         url(/fonts/Exo2.0-Thin.otf) format('truetype');
+    src: url(/fonts/Exo2.0-Thin.otf) format('opentype');
 }
 
 body {
@@ -43,6 +42,7 @@ h1 {
     margin-top: 4px;
 }
 
+
 .cats input {
    display: none;
 }
@@ -50,9 +50,7 @@ h1 {
 input:checked + .food{
     border-color: #d91667;
 }
-.food:hover,
-    .cat:hover:before,
-    .cat:hover:after {
+.food:hover {
         border-color: #2EA8E6;
     }
 
@@ -105,6 +103,10 @@ input:checked .cats{
     font-size: 32px;
     color: #ffffff;
 }
+
+.food:hover 
+
+
 
 .cat-photo {
     content: url(/src/img/Photo_Cat.png);
