--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,19 +1,30 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 @font-face {
     font-family: 'Exo2.0-Thin';
     font-style: normal;
     src: url(../fonts/Exo2.0-Thin.otf) format('opentype');
 }
 
-body {
+body, html {
+    height: 100%;
+}
+
+.body-wrapper {
     display: flex;
     background-image: url(../img/Pattern.png);
     text-align: center;
-    padding: 20px;
-    margin: 0;
+    margin: 0 auto;
     position: relative;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+    width: auto;
+    height: 100%;
+    min-height: 100%;
     font-family: 'Trebuchet MS', sans-serif;
 }
 
