--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 @font-face {
     font-family: 'Exo2.0-Thin';
@@ -11,11 +7,11 @@
 
 body, html {
     height: 100%;
+    background: url(../img/Pattern.png);
 }
 
 .body-wrapper {
     display: flex;
-    background-image: url(../img/Pattern.png);
     text-align: center;
     margin: 0 auto;
     position: relative;
@@ -24,7 +20,6 @@ body, html {
     align-items: center;
     width: auto;
     height: 100%;
-    min-height: 100%;
     font-family: 'Trebuchet MS', sans-serif;
 }
 
