--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,6 @@ h1 {
 
 .food {
     position: relative;
-    z-index: 10;
     width: 312px;
     height: 440px;
     background-color: #f2f2f2;
@@ -114,6 +113,9 @@ input:checked .cats{
 }
 
 .food-introduction {
+    position: relative;
+    top: -10px;
+    z-index: 3;
     text-align: center;
     color: #898989;
     margin-left: -20px;
@@ -131,7 +133,7 @@ input:checked .cats{
 
 .food-name {
     margin: 0;
-    margin-top: -8px;
+    margin-top: -10px;
     font-size: 48px;
     font-weight: bold;
 }
