--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,7 @@ h1 {
     top: -33px;
     border: 4px solid #1698d9;
     border-bottom: none;
-    border-top-right-radius:10px;
+    border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     padding-top: 19px;
     padding-right: 51px;
@@ -95,20 +95,20 @@ h1 {
     display: none;
 }
 
-input:checked +.food,
-input:checked +.food::after,
-input:checked +.food::before{
+input:checked+.food,
+input:checked+.food::after,
+input:checked+.food::before {
     border-color: #d91667;
 }
 
 
 .food:hover,
 .food:hover:before,
-.food:hover:after{
+.food:hover:after {
     border-color: #2EA8E6;
 }
 
-input:checked .cats{
+input:checked .cats {
     border-color: #D91667;
 }
 
@@ -198,7 +198,7 @@ input:checked .cats{
 
 .cats-footer--buy {
     color: #138ac6;
-    border-bottom: 1px dashed;   
+    border-bottom: 1px dashed;
 }
 
 .cats-footer span {
@@ -215,4 +215,52 @@ input:checked .cats{
 
 .hidden {
     display: none;
+}
+
+.ended .food {
+    background-image: linear-gradient(rgba(242, 242, 242, 0.5), rgba(242, 242, 242, 0.5)),
+        url(../img/Photo_Cat.png);
+    border: solid #b2b2b2 4px;
+    border-radius: 10px;
+    border-top: none;
+    cursor: default;
+}
+
+.ended .food::before {
+    border-radius: 7px;
+    border-top-left-radius: 12px;
+    border-left: 5px solid #b3b3b3;
+}
+
+.ended .food::after {
+    border: 4px solid #b3b3b3;
+    border-bottom: none;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.ended .food-name,
+.ended .food-components,
+.ended .food-introduction,
+.ended .food-quantity {
+    color: #d5d5d5;
+}
+
+.ended .food-weight {
+    background-color: #d5d5d5;
+}
+
+.ended .food:hover .food-weight {
+    background-color: #d5d5d5;
+}
+
+.ended .cats-footer {
+    cursor: default;
+}
+
+.cats-footer--ended {
+    color: #fffe66;
+    font-family: inherit;
+    font-size: 13px;
+    margin-top: 15px;
 }
